update makepackage scripts